--- a/css/general.css
+++ b/css/general.css
@@ -81,7 +81,7 @@ box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.32), -3px -3px 6px rgba(220, 220, 220, 0
 .nav{
   position: absolute;
   height: 70px;
-  width: 350px;
+  width: 355px;
   bottom: 0px;
   left: 0px;
   z-index: 10;
@@ -95,6 +95,7 @@ box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.32), -3px -3px 6px rgba(220, 220, 220, 0
   margin-left: 17px;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.37), -4px -4px 10px rgba(208, 208, 208, 0.15);
   border-radius: 15px;
+  z-index: 10;
   border: none;
   background-color: var(--dark);
 }
@@ -168,6 +169,31 @@ svg{
   vertical-align: middle;
 }
 .nav-area{
-  position: absolute;
+  position: relative;
   top: 80px;
 }
+::-webkit-scrollbar {
+  width: 10px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.37), -2px -2px 5px rgba(208, 208, 208, 0.15);
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--dark);
+  overflow: hidden;
+  right: 0px;
+  top: 0px;
+  box-shadow: inset 5px 5px 15px rgba(0, 0, 0, 0.63), inset -5px -5px 15px rgba(208, 208, 208, 0.432)
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #222222;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.37), -2px -2px 5px rgba(208, 208, 208, 0.15);
+}
+
+/* Handle on hover */
+ ::-webkit-scrollbar-thumb:hover { 
+  background: #222222; 
+}  
