--- a/css/mod_4.css
+++ b/css/mod_4.css
@@ -1,3 +1,11 @@
+.nav4{
+  position: absolute;
+	top: 80px;
+  left: 0px;
+	height: 350px;
+  width: 340px;
+	overflow: auto;
+}
 .option1{
     position: absolute;
     width: 295px;
