--- a/css/mod_2.css
+++ b/css/mod_2.css
@@ -3,6 +3,9 @@
     --hightlight-text: #AD00FF;
     --dark-black: #2a2a2a;
     --white: #ffffff;
+	--dlt-btn-clr: #CE0000;
+	--save-btn: #06C202;
+	--ld-btn: #8102BD;
   }
 .nav2{
 	position: absolute;
@@ -78,7 +81,7 @@
 	left: 0px;
 	width: 91px;
 	height: 25px;
-	top: 22px;
+	top: 21px;
 	font-style: normal;
 	font-weight: 100;
 	font-size: 14px;
@@ -92,3 +95,61 @@ color: #FFFFFF;
 	left: 100px;
 	top: 0px;
 }
+.btn{
+	position: absolute;
+	padding-left: 20px;
+	padding-right: 20px;
+	margin-top: 20px;
+	top: 180px;
+	left: 100px;
+	background-color: var(--ld-btn);
+	border: none;
+	height: 40px;
+	width: 90px;
+
+	vertical-align: middle;
+
+	color: var(--white);
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 800;
+	font-size: 16px;
+	line-height: 29px;
+	align-items: center;
+
+	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.37), -4px -4px 10px rgba(208, 208, 208, 0.15);
+	border-radius: 10px;
+	
+}
+.btn:hover{
+	box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.37), -8px -8px 10px rgba(208, 208, 208, 0.15);
+	height: 40px;
+	width: 90px;
+	transition: .2s ease-in;
+}
+.btn.not-active {
+	background-color: var(--dark-black);
+	color: #ffffff;
+	cursor: default;
+	left: 180px;
+}
+.btn.green {
+	background-color:var(--ld-btn);
+	color: #fff;
+	left: 20px;
+}
+/* .btn.green:hover {
+	background-color: rgba(158, 58, 205, 0.86);
+} */
+.btn.red {
+	background-color: var(--dlt-btn-clr);
+	color: #fff;
+	cursor: pointer;
+	left: 180px;
+}
+/* .btn.red:hover {
+	background-color: rgba(248, 108, 108, 0.84);
+} */
