--- a/css/options.css
+++ b/css/options.css
@@ -1,82 +1,391 @@
+:root {
+    --dark: #333333;
+    --hightlight-text: #be32ff;
+    --dark-black: #2a2a2a;
+    --white: #ffffff;
+    --dlt-btn-clr: #CE0000;
+    --save-btn: #06C202;
+    --ld-btn: #8102BD;
+}
+
 body {
-  margin: 15px;
-  font-family: helvetica, arial, sans-serif;
-  font-size: 13px;
+    background-color: var(--dark);
+    color: var(--white);
 }
 
 #header {
-  padding: 1em;
-  padding-bottom: 2em;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100px;
+    background: var(--dark);
+    box-shadow: -4px -4px 30px rgba(0, 0, 0, 0.83);
 }
 
-#info {
-  float: right;
+h1 {
+    position: absolute;
+    width: 400px;
+    /* height: 50px; */
+    top: 10px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 40px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: var(--hightlight-text);
+    padding-left: 450px;
 }
 
-#info span {
-  margin-bottom: 10px;
-  float: right;
+#loginpg {
+    position: absolute;
+    width: 300px;
+    padding-bottom: 20px;
+    height: 250px;
+    top: 200px;
+    color: var(--white);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 29px;
+    align-items: center;
+
+    left: 480px;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.37), -4px -4px 10px rgba(208, 208, 208, 0.15);
+    border-radius: 10px;
 }
 
-#header h1 {
-  display: inline;
-  font-size: 156%;
-  padding-bottom: 43px;
-  padding-left: 75px;
-  padding-top: 30px;
-  background: url(icon_128.png) no-repeat;
-  background-size: 50px;
-  background-position: 1px 18px;
+#usrname {
+    top: 70px;
+    left: 50px;
+
+    position: absolute;
+    width: 200px;
+    height: 40px;
+    padding: 8px 15px;
+    color: var(--white);
+    text-decoration: none;
+    display: inline-block;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 29px;
+    box-sizing: border-box;
+    border: none;
+    vertical-align: middle;
+    background: var(--dark);
+    box-shadow: inset 4px 4px 10px rgba(0, 0, 0, 0.37), inset -4px -4px 10px rgba(208, 208, 208, 0.15);
+    border-radius: 10px;
 }
 
-#settings {
-  margin: 6px 6px 0 6px;
-  padding: 10px;
-  color: #333;
-  border: 1px solid #dedede;
-  border-radius: 5px 5px;
+#usrname::placeholder {
+    font-weight: 200;
+    font-size: 16px;
+    line-height: 15px;
+    left: 0px;
 }
 
-#settings table {
-  font-size: 13px;
+#pswd {
+    top: 130px;
+    left: 50px;
+
+    position: absolute;
+    width: 200px;
+    height: 40px;
+    padding: 8px 15px;
+    color: var(--white);
+    text-decoration: none;
+    display: inline-block;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 29px;
+    box-sizing: border-box;
+    border: none;
+    vertical-align: middle;
+    background: var(--dark);
+    box-shadow: inset 4px 4px 10px rgba(0, 0, 0, 0.37), inset -4px -4px 10px rgba(208, 208, 208, 0.15);
+    border-radius: 10px;
 }
 
-th,
-td {
-  vertical-align: top;
+#pswd::placeholder {
+    font-weight: 200;
+    font-size: 16px;
+    line-height: 15px;
+    left: 0px;
 }
 
-th {
-  text-align: right;
-  font-weight: bold;
-  white-space: nowrap;
-  padding: 12px 24px 12px 12px;
+#login-text {
+    position: absolute;
+    top: 23px;
+    left: 65px;
+    /* border-bottom: solid 2px var(--dark-black); */
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: var(--hightlight-text);
 }
 
-td {
-  padding: 12px;
+#login {
+    position: absolute;
+    vertical-align: middle;
+    /* padding-left: 20px;
+    padding-right: 20px; */
+    /* margin-top: 2px; */
+    top: 200px;
+    left: 50px;
+    background-color: var(--ld-btn);
+    border: none;
+    height: 36px;
+    width: 200px;
+
+    color: var(--white);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 29px;
+    align-items: center;
+
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.37), -4px -4px 10px rgba(208, 208, 208, 0.15);
+    border-radius: 10px;
 }
 
-.description {
-  visibility: hidden;
-  width: 20em;
-  font-style: italic;
-  color: #777;
+#unsuccessful {
+    position: absolute;
+    top: 23px;
+    left: 50px;
+    /* border-bottom: solid 2px var(--dark-black); */
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: var(--dlt-btn-clr);
 }
 
-#blacklist {
-  height: 15em;
-  width: 25em;
+#login:hover {
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.37), -8px -8px 10px rgba(208, 208, 208, 0.15);
+    height: 36px;
+    width: 200px;
+    transition: .2s ease-in;
 }
 
-#footer {
-  margin: 10px;
+#tohide {
+    position: absolute;
+    top: 150px;
 }
 
-#status {
-  margin-left: 10px;
+.text {
+    position: relative;
+    left: 200px;
+    margin: 10px;
+    background: var(--dark);
+    box-shadow: inset 4px 4px 10px rgba(0, 0, 0, 0.37), inset -4px -4px 10px rgba(208, 208, 208, 0.15);
+    width: 200px;
+    height: 80px;
+    border: none;
+    overflow: auto;
+    resize: none;
+    border-radius: 10px;
+    padding: 5px 10px;
+    color: var(--white);
+    text-decoration: none;
+    display: inline-block;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 29px;
+    box-sizing: border-box;
+    border: none;
+    vertical-align: middle;
 }
 
-.success {
-  color: green;
+.lab {
+    position: absolute;
+    /* top: 23px; */
+    left: 30px;
+    width: 150px;
+    /* border-bottom: solid 2px var(--dark-black); */
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+}
+
+.login-details {
+    position: absolute;
+    margin: 10px;
+    left: 700px;
+    top: 0px;
+    width: 430px;
+
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.37), -4px -4px 10px rgba(208, 208, 208, 0.15);
+    border-radius: 10px;
+}
+
+.up {
+    height: 40px;
+}
+
+.login-text {
+    left: 170px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+
+
+::-webkit-scrollbar {
+    width: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.37), -2px -2px 5px rgba(208, 208, 208, 0.15);
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: var(--dark);
+    overflow: hidden;
+    right: 0px;
+    top: 0px;
+    box-shadow: inset 5px 5px 15px rgba(0, 0, 0, 0.63), inset -5px -5px 15px rgba(208, 208, 208, 0.432)
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--hightlight-text);
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.37), -2px -2px 5px rgba(208, 208, 208, 0.15);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #222222;
+}
+
+#save-button {
+    position: absolute;
+    vertical-align: middle;
+    /* padding-left: 20px;
+    padding-right: 20px; */
+    /* margin-top: 2px; */
+    top: 350px;
+    left: 300px;
+    background-color: var(--ld-btn);
+    border: none;
+    height: 50px;
+    width: 200px;
+
+    color: var(--white);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 29px;
+    align-items: center;
+
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.37), -4px -4px 10px rgba(208, 208, 208, 0.15);
+    border-radius: 10px;
+}
+
+#save-button:hover {
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.37), -8px -8px 10px rgba(208, 208, 208, 0.15);
+    height: 50px;
+    width: 200px;
+    transition: .2s ease-in;
+}
+
+#clear-data {
+    position: absolute;
+    vertical-align: middle;
+    /* padding-left: 20px;
+    padding-right: 20px; */
+    /* margin-top: 2px; */
+    top: 350px;
+    left: 600px;
+    background-color: var(--dlt-btn-clr);
+    border: none;
+    height: 50px;
+    width: 200px;
+
+    color: var(--white);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 29px;
+    align-items: center;
+
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.37), -4px -4px 10px rgba(208, 208, 208, 0.15);
+    border-radius: 10px;
+}
+
+#clear-data:hover {
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.37), -8px -8px 10px rgba(208, 208, 208, 0.15);
+    height: 50px;
+    width: 200px;
+    transition: .2s ease-in;
+}
+
+.show-top {
+    width: 80px;
+    height: 40px;
+}
+
+.options-saved {
+    position: absolute;
+    /* top: 23px; */
+    left: 500px;
+    width: 600px;
+    /* border-bottom: solid 2px var(--dark-black); */
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: var(--save-btn);
 }
