--- a/css/mod_2.css
+++ b/css/mod_2.css
@@ -159,3 +159,31 @@
 	cursor: pointer;
 	left: 180px;
 }
+
+.always_on {
+	position: absolute;
+	/* padding-left: 20px;
+	padding-right: 20px; */
+	top: 10px;
+	left: 60px;
+	background-color: var(--ld-btn);
+	border: none;
+	height: 40px;
+	width: 90px;
+
+	vertical-align: middle;
+
+	color: var(--white);
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 800;
+	font-size: 14px;
+	line-height: 29px;
+	align-items: center;
+
+	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.37), -4px -4px 10px rgba(208, 208, 208, 0.15);
+	border-radius: 10px;
+}
